<resources>
    <string name="app_name">Enrolamiento</string>
    <string name="get_user_log_in">Autenticando</string>
    <string name="message_log_out">Saliendo</string>
    <string name="message_title_logout">Salir de la aplicación</string>
    <string name="message_message_logout">Al salir de la aplicación la operación actual será cancelada y la sesión actual se cerrará\n¿Desea salir de la aplicación?</string>
    <string name="message_cancel_operation_title">Cancelar operación</string>
    <string name="message_cancel_operation">Cancelando operación</string>
    <string name="message_cancel_operation_alert">La operación actual será cancelada y regresarás a la pantalla principal\n¿Desea cancelar la operación actual?</string>
    <string name="message_close_operation_title">Salir de la operación</string>
    <string name="message_close_operation_alert">La operación actual será dejada pendiente y regresarás a la pantalla principal.\nPara continuar la operación ingresa el CURP de la operación pendeinte en la pantalla del formulario y da click en continuar.\n¿Deseas salir de la operación actual?</string>
    <string name="message_start_operation">Iniciando operación</string>
    <string name="message_credentials_captured">Comprobando credenciales</string>
    <string name="message_face_scan_check">Comprobando imagen</string>
    <string name="message_figerprints_check">Almacenando huellas dactilares</string>
    <string name="message_figerprints_auth">Validando huella digital</string>
    <string name="message_pay_confirm_operation">Confirmando operación</string>
    <string name="message_send_data_credential">Enviando datos de credencial</string>
    <string name="message_send_data_document">Enviando datos de comprobante</string>
    <string name="message_finger_sing_contract">Realizando firma de contrato</string>
    <string name="message_finger_sing_send_mail_contract">Enviando copia de contrato por correo</string>
    <string name="message_data_validation">Validación de campo</string>
    <string name="message_error_curp_format">El formato del campo ( CURP ) es erroneo. </string>
    <string name="message_error_length_curp">El campo ( CURP ) debe tener 18 digitos.</string>
    <string name="message_obligatory_field_curp">El campo ( CURP ) es obligatorio.</string>
    <string name="message_obligatory_field_mail">El campo ( Correo Electrónico ) es obligatorio.</string>
    <string name="message_error_mail_format">El formato del campo ( Correo Electrónico ) es erroneo. </string>
    <string name="tv_user_login">Usuario</string>
    <string name="tv_hint_user_login">Usuario</string>
    <string name="tv_pass_login">Contraseña</string>
    <string name="tv_hint_pass_login">Contraseña</string>
    <string name="b_in_login">Ingresar</string>
    <string name="lfw_b_capture_fingerprint">Capturar Huella</string>
    <string name="message_figerprints_login">Verificando Huella Digital</string>
    <string name="message_ws_notice">Aviso</string>
    <string name="message_ws_tray_again">Reintentar</string>
    <string name="message_ws_no_internet">No tienes conexi\u00F3n a internet</string>
    <string name="message_ws_petition_fail">Ocurri\u00F3 un error al establecer conexi\u00F3n con el servidor</string>
    <string name="message_ws_response_fail">La operación no puede ser procesada por el servidor</string>
    <string name="message_ws_response_300">El archivo se encuentra en otra direcci\u00F3n</string>
    <string name="message_ws_response_400">La consulta no puede ser procesada</string>
    <string name="message_ws_response_500">No se pudo consultar el servidor</string>
    <string name="message_ws_response_10001">Error al digitalizar o verificar\nel documento identificativo</string>
    <string name="message_ws_response_10002">Error al almacenar el documento\nidentificativo en expediente digital</string>
    <string name="message_ws_response_10003">Error al presistir proceso identificativo\nsobre Base de Datos</string>
    <string name="message_ws_response_20001">Error al almacenar fotografia facial en expediente digital</string>
    <string name="message_ws_response_20002">Error al persistir proceso de captura facial\nsobre Base de Datos</string>
    <string name="message_ws_response_30001">Error al digitalizar o verificar el comprobante de domicilio</string>
    <string name="message_ws_response_30002">Error al lamacenar comprobante de domicilio en expediente digital</string>
    <string name="message_ws_response_30003">Error al persistir proceso de comprobante de domicilio sobre Base de Datos</string>
    <string name="message_ws_response_40001">Error al almacenar minucias dactilares en expediente digital</string>
    <string name="message_ws_response_40002">Error al almacenar minucias dactilares y facilaes en Motor Biométrico</string>
    <string name="message_ws_response_40003">Error, biométricos dactilares o faciales duplicados</string>
    <string name="message_ws_response_40004">Error al persistir proceso de registro\nBiométrico sobre Base de Datos</string>
    <string name="default_url_id_scan">http://192.168.1.201:38080/</string>
    <string name="default_license_id_scan">0b3237e6-76c5-40d7-b895-0b7c74ccda5a</string>
    <string name="default_url_teknei">http://192.168.1.190:28080/tkn-api/api/enrollment/</string>
    <string name="default_url_mobbsign">https://192.168.1.100:28443/DemoServer/</string>
    <string name="default_license_mobbsign">56a03255-7bd3-49f2-8b32-2a62f1a867b9</string>
    <string name="default_url_oauthaccess">http://192.168.1.190:8081</string>
    <string name="settings_fingerprint_reader">biosmart/watson/mso</string>
    <string name="default_fingerprint_reader">mso</string>
    <string name="default_id_company">1</string>
    <string-array name="fingerprint_reader_array">
        <item> </item>
        <item>mso</item>
        <item>watson</item>
        <item>biosmart</item>
    </string-array>
    <string name="continue_message_dialog">Continuar</string>
    <string name="cancel_message_dialog">Cancelar</string>
    <string name="message_dialog">Mensaje</string>
    <string name="form_activity_name">Formulario</string>
    <string name="phone_form">Teléfono</string>
    <string name="continue_form">Continuar</string>
    <string name="mail_form">* Correo electrónico</string>
    <string name="mother_last_name_form">* Apellido materno</string>
    <string name="last_name_form">* Apellido paterno</string>
    <string name="name_form">* Nombre(s)</string>
    <string name="required_text_form">* Campos obligatorios</string>
    <string name="instructions_form">Ingresa los campos obligatorios y presiona el botón continuar, para iniciar la operación.</string>
    <string name="tv_curp_form">* CURP</string>
    <string name="tv_product">* Seleccione un producto</string>
    <string-array name="product_array">
        <item>* Seleccione un producto </item>
        <item>product 1</item>
        <item>product 2</item>
        <item>product 3</item>
    </string-array>
    <string-array name="zone_array">
        <item>* Seleccione una zona </item>
        <item>Zona Norte</item>
        <item>Zona Sur</item>
        <item>Zona Este</item>
        <item>Zona Oriente</item>
    </string-array>
    <string-array name="person_array">
        <item>* Seleccione un tipo de persona a enrolar</item>
        <item>Operador</item>
        <item>Cliente</item>
    </string-array>
    <string name="bar_activity_name">Registro de Cuenta</string>
    <string name="bar_required_text">* Campos obligatorios</string>
    <string name="bar_instructions">Ingresa los campos obligatorios y presiona el botón continuar para registrar cuenta.</string>
    <string name="bar_ed_clabe">* Cuenta CLABE destino</string>
    <string name="bar_ed_alias">* Alias de la cuenta</string>
    <string name="bar_ed_ammount">* Cantidad máxima </string>
    <string name="bar_message_obligatory_field_clabe">El campo ( CLABE ) es obligatorio.</string>
    <string name="bar_message_obligatory_field_alias">El campo ( Alias ) es obligatorio.</string>
    <string name="bar_message_obligatory_field_ammount">El campo ( Cantidad máxima ) es obligatorio.</string>
    <string name="bar_message_obligatory_field_bank">Debe seleccionar una Institución Bancaria.</string>
    <string name="bar_message_register_account">Registrando cuenta bancaria</string>
    <string-array name="bank_array">
        <item>* Seleccione un banco</item>
    </string-array>
    <string name="sp_tv_title_activity">Enrolamiento de Personas</string>
    <string name="sp_tv_instructions">Seleccione un tipo de persona para enrollar.</string>
    <string name="sp_tv_customer">Cliente</string>
    <string name="sp_tv_operator">Agente</string>
    <string name="type_operator">1</string>
    <string name="type_customer">2</string>
    <string name="ar_tv_title_activity">Registro de Cuenta</string>
    <string name="ar_tv_instructions">Ingrese los datos solicitados para la generación de cuenta.</string>
    <string name="ar_tv_required_text">* Campos obligatorios</string>
    <string name="ar_tv_user_name">* Nombre de usuario</string>
    <string name="ar_tv_password">* Contraseña</string>
    <string name="ar_tv_confirm_password">* Confirmar contraseña</string>
    <string name="ar_message_obligatory_field_user">El campo ( Nombre de usuario ) es obligatorio.</string>
    <string name="ar_message_obligatory_field_password">El campo ( Contraseña ) es obligatorio.</string>
    <string name="ar_message_obligatory_field_confirm">El campo ( Confirmar contraseña ) es obligatorio.</string>
    <string name="ar_message_error_confirm">Los campos ( Contraseña ) y ( Confirmar contraseña ) no coinciden.</string>
    <string name="select_id_scan_activity_name">Selecciona tipo de identificación</string>
    <string name="ine_select_id_type">INE</string>
    <string name="ife_select_id_type">IFE</string>
    <string name="ife_c_select_id_type">IFE tipo C</string>
    <string name="ife_d_select_id_type">IFE tipo D</string>
    <string name="pasaporte_select_id_type">Pasaporte</string>
    <string name="licencia_select_id_type">Licencia</string>
    <string name="instruction_id_type">Selecciona un tipo de identificación para continuar.</string>
    <string name="switch_act">Autofocus</string>
    <string name="switch_desc">Manual</string>
    <string name="id_scan_activity_name">Identificación</string>
    <string name="continue_id_scan">Continuar</string>
    <string name="identification_frontal_id_scan">Identificación - Anverso</string>
    <string name="instruction_begin_fingerprints_scan">Capturando huella, coloque su dedo en el lector.</string>
    <string name="bio_watson_continue">Continuar</string>
    <string name="bio_watson_close_device">Cerrar Dispositivo</string>
    <string name="bio_watson_open_device">Abrir Dispositivo</string>
    <string name="bio_watson_start_capture">Iniciar Captura</string>
    <string name="bio_watson_stop_capture">Detener Captura</string>
    <string name="bio_watson_left_thumb">Pulgar Izquierdo</string>
    <string name="bio_watson_left_index">Índice Izquierdo</string>
    <string name="bio_watson_left_middle">Medio Izquierdo</string>
    <string name="bio_watson_left_ring">Anular Izquierdo</string>
    <string name="bio_watson_left_little">Meñique Izquierdo</string>
    <string name="bio_watson_right_thumb">Pulgar Derecho</string>
    <string name="bio_watson_right_index">Índice Derecho</string>
    <string name="bio_watson_right_middle">Medio Derecho</string>
    <string name="bio_watson_right_ring">Anular Derecho</string>
    <string name="bio_watson_right_little">Meñique Derecho</string>
    <string name="instructions_search_operation_consult_operation">Ingresa la operación que desees consultar</string>
    <string name="hint_search_consult_operation">Número de operación</string>
    <string name="button_search_consult_operation">Buscar</string>
</resources>