<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ico_sabadell"
                android:scaleType="centerInside" />

            <TextView
                style="@style/normalBlackFont"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ar_tv_instructions"/>

            <TextView
                style="@style/normalBlackFont"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ar_tv_required_text"/>

            <EditText
                style="@style/normalBlackFontET"
                android:id="@+id/ar_et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:hint="@string/ar_tv_user_name"
                android:layout_marginTop="@dimen/vertical_separator_form"/>

            <EditText
                style="@style/normalBlackFontET"
                android:id="@+id/ar_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:hint="@string/ar_tv_password"
                android:layout_marginTop="@dimen/vertical_separator_form"/>

            <EditText
                style="@style/normalBlackFontET"
                android:id="@+id/ar_et_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:maxLength="8"
                android:maxLines="1"
                android:hint="@string/ar_tv_confirm_password"
                android:layout_marginTop="@dimen/vertical_separator_form"/>

        </LinearLayout>

    <Button
        style="@style/normalWhiteFontBTN"
        android:id="@+id/ar_btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_form"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_form"
        android:background="@drawable/selector_primary_button"/>

</RelativeLayout>
