<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bar_instructions"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bar_required_text"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/sp_option_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_marginTop="@dimen/vertical_separator_form"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/bar_clabe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:hint="@string/bar_ed_clabe"
                android:layout_marginTop="@dimen/vertical_separator_form"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/bar_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="textCapCharacters"
                android:maxLength="20"
                android:maxLines="1"
                android:hint="@string/bar_ed_alias"
                android:layout_marginTop="@dimen/vertical_separator_form"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/bar_ammount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="numberDecimal"
                android:maxLength="15"
                android:maxLines="1"
                android:hint="@string/bar_ed_ammount"
                android:layout_marginTop="@dimen/vertical_separator_form"
                android:textAlignment="center"/>

        </LinearLayout>

    <Button
        android:id="@+id/bar_btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_form"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_form"
        android:textColor="@color/text_color_white"
        android:background="@drawable/selector_primary_button"/>

</RelativeLayout>
