<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ico_sabadell"
            android:scaleType="centerInside" />

            <TextView
                style="@style/normalBlackFont"
                android:textSize="25sp"
                android:id="@+id/tv_id_selection_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:visibility="visible"
                android:text="@string/instruction_id_type"/>

            <Button
                style="@style/normalWhiteFontBTN"
                android:id="@+id/b_ine_select_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rounded_button"
                android:text="@string/ine_select_id_type"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/b_ife_c_select_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rounded_button"
                android:text="@string/ife_c_select_id_type"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:layout_marginBottom="50dp" />

            <Button
                android:id="@+id/b_ife_d_select_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rounded_button"
                android:text="@string/ife_d_select_id_type"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:layout_marginBottom="50dp" />

            <Button
                android:id="@+id/b_passport_select_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rounded_button"
                android:text="@string/pasaporte_select_id_type"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:layout_marginBottom="50dp"
                />

            <Button
                android:id="@+id/b_licence_select_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_rounded_button"
                android:text="@string/licencia_select_id_type"
                android:textStyle="bold"
                android:textColor="@color/text_color_white"
                android:layout_marginBottom="50dp"
                android:visibility="gone"
                />

    </LinearLayout>

</RelativeLayout>
