<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"

        >
        <TextView
            android:text="@string/instructions_search_operation_consult_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_num_operation_consult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_search_consult_operation"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/b_search_operation_consult"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_search_consult_operation"
                android:textColor="@color/text_color_white"
                android:background="@drawable/selector_rounded_button"
                android:layout_margin="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
